# Django-4-by-example

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml  requirements.txt  simple.py
chapter_01/mysite/blog/: admin.py  models.py  urls.py  views.py
chapter_01/mysite/mysite/: settings.py
chapter_02/mysite/blog/: models.py  urls.py  views.py
chapter_03/mysite/: mysite_data.json
chapter_03/mysite/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
chapter_03/mysite/mysite/: settings.py  urls.py
chapter_03/mysite/scripts/: me.py
chapter_04/bookmarks/account/: admin.py  authentication.py  forms.py  urls.py  views.py
chapter_04/bookmarks/bookmarks/: settings.py  urls.py
chapter_05/bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
chapter_05/bookmarks/bookmarks/: asgi.py  settings.py  urls.py
chapter_06/bookmarks/: cert.key
chapter_06/bookmarks/account/: forms.py  urls.py  views.py
chapter_06/bookmarks/bookmarks/: settings.py  wsgi.py
chapter_06/bookmarks/images/: models.py  urls.py  views.py
chapter_07/: docker-compose.yml
chapter_07/bookmarks/: cert.crt
chapter_07/bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
chapter_07/bookmarks/actions/: admin.py  models.py  utils.py
chapter_07/bookmarks/bookmarks/: settings.py  urls.py
chapter_07/bookmarks/images/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
chapter_08/myshop/cart/: cart.py  urls.py  views.py
chapter_08/myshop/myshop/: __init__.py  (+5 more)
(+68 files in other folders)
